--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "datatables.net": "^1.10.15",
     "datatables.net-bs": "^1.10.15",
+    "multiselect": "^0.9.12",
     "select2": "^4.0.3",
     "sweetalert2": "^6.6.8"
   }
